i added functionality and check the backprop and fixed a major bug of reference in operator/

--- a/Experimental.ipynb
+++ b/Experimental.ipynb
@@ -22,8 +22,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "96572c8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 32)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41c0a546",
    "metadata": {},
    "outputs": [],
    "source": []
